Fixed text truncating with an ellipsis in mobile screens

--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -1,10 +1,16 @@
 .button-style {
-    border-radius: 2px !important;
-    background-color: #D72439 !important;
-    border-left: solid 2px #E24E59 !important;
-    border-bottom: solid 2px #8F1422 !important;
-    -webkit-box-shadow: 5px 5px 5px -2px rgba(36,6,9,1);
-    -moz-box-shadow: 5px 5px 5px -2px rgba(36,6,9,1);
-    box-shadow: 5px 5px 5px -2px rgba(36,6,9,1);
     padding: 4px;
+}
+
+.button-label-text {
+    color: #FFFFFF;
+    font-family: rtb;
+    text-transform: uppercase;
+    font-size: 32px;
+}
+
+@media only screen and (max-width: 375px) {
+    .button-label-text {
+        font-size: 24px;
+    }
 }
